<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg"
    >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_head"
        >
        
    </LinearLayout>
	<LinearLayout
	    android:id="@+id/main_head_msg"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/msg_bg"
	    android:orientation="vertical"
	    >
	    <LinearLayout 
	        android:id="@+id/main_ani_board"
	        android:layout_width="960dp"
	        android:layout_height="0dp"
	        android:layout_marginLeft="-320dp"
	        android:orientation="horizontal"
	        android:layout_weight="2"
	        >
	        <LinearLayout 
	            android:id="@+id/msg_left"
	            android:layout_width="320dp"
	            android:layout_height="100dp"
	            android:orientation="vertical"
	            >
	            <TextView 
	                android:id="@+id/main_msg_left_title"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dp"
	                android:layout_marginTop="10dp"
	                android:textColor="#FF000000"
	                android:textSize="20dp"
	                android:text="@string/credits_achieved"
	                />
	            <ProgressBar 
	                android:id="@+id/main_msg_left_pb"
	                android:layout_width="300dp"
	                android:layout_height="15dp"
	                android:max="1000"
	                android:progress="999"
	                android:layout_gravity="center"
	                android:layout_marginTop="15dp"
	                style="?android:attr/progressBarStyleHorizontal"
	                />
	            <Button 
	                android:id="@+id/main_enter_credit"
	                android:layout_width="100dp"
	                android:layout_height="35dp"
	                android:layout_marginLeft="210dp"
	                android:text="@string/credits"
	                />
	        </LinearLayout>
	        <LinearLayout 
	            android:id="@+id/msg_middle"
	            android:layout_width="320dp"
	            android:layout_height="100dp"
	            android:orientation="vertical"
	            >
	            <LinearLayout 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
					android:orientation="horizontal"
	                android:layout_marginLeft="10dp"
	                >
	                <TextView 
	                	android:id="@+id/main_msg_middle_title"
	                	android:layout_width="wrap_content"
	                	android:layout_height="wrap_content"
	                	android:textColor="#FF000000"
	                	android:textSize="20dp"
	                	android:text="@string/score_achieved"
	                />
	                <TextView 
	                    android:id="@+id/main_msg_middle_score"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textColor="#FF057e0b"
	                    android:textSize="35dp"
	                    />
	                <TextView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textColor="#FF000000"
	                    android:textSize="20dp"
	                    android:text="@string/unit_score"
	                    android:paddingLeft="5dp"
	                    />
	            </LinearLayout>
	            
	            <Button 
	                android:id="@+id/main_msg_middle_rescore"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:layout_marginLeft="200dp"
	                android:background="@drawable/rescore_button_style"
	                android:text="@string/rescore"
	                android:textColor="#FF000000"
	                android:textSize="20dp"
	                />
	            
	        </LinearLayout>
	        <LinearLayout 
	            android:id="@+id/msg_right"
	            android:layout_width="320dp"
	            android:layout_height="100dp"
	            android:background="#FF0000FF"
	            >
	            
	        </LinearLayout>
	    </LinearLayout>
	    <ImageView 
	        android:id="@+id/main_msg_switchbar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="-25dp"
	        android:src="@drawable/switch_middle"
	        />
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/item_bg_green"
	    >
	    <TextView 
	        android:textColor="#FFFFFFFF"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dp"
	        android:text="@string/main_functions"
	        android:layout_weight="1"
	        android:layout_gravity="center"
	        />
	    
	</LinearLayout>
	
	<ImageView
	    android:id="@+id/main_mainboard"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/main_board_v2"
	    >
	    
	</ImageView>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/item_bg_green"
	    >
	    <TextView 
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:textColor="#FFFFFFFF"
	        android:text="@string/main_recent_activities"
	        android:paddingLeft="10dp"
	        android:layout_weight="1"
	        android:layout_gravity="center"
	        />
	</LinearLayout>
	
	<FrameLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    >
		<ListView 
	    	android:id="@+id/main_activities"
	    	android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    >
		</ListView>
		<TextView
		    android:id="@+id/main_no_activity"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#FF404040"
		    android:textSize="20dp"
		    android:layout_gravity="center"
		    android:visibility="invisible"
		    android:text="@string/no_activity"
		    />
	</FrameLayout>
	
</LinearLayout>