<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg"
    >
    <FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/head_bg_v2"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#FFFFFFFF"
            android:text="@string/sdcard"
            android:layout_gravity="center"
            android:textSize="20dp"
            />
    </FrameLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/msg_bg"
        android:orientation="horizontal"
        >
        <FrameLayout 
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            >
            <FrameLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sdcard_big"
                android:layout_gravity="center"
                >
                <TextView 
                    android:id="@+id/sd_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:textColor="#FF000000"
                    android:layout_gravity="center"
                    />
            </FrameLayout>
        </FrameLayout>
        <FrameLayout 
            android:layout_weight="2"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            >
            <LinearLayout 
            android:id="@+id/sd_info"    
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            >
            <TextView 
                android:id="@+id/sd_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF000000"
                android:textSize="16dp"
                />
             <TextView 
                android:id="@+id/sd_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF000000"
                android:textSize="16dp"
                />
             <LinearLayout 
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="5dp"
                 >
                 <Button 
                 android:id="@+id/sd_button_clear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/small_button_style"
                 android:text="@string/clear_frag"
                 android:textColor="#FF000000"
                 android:textSize="14dp"
                 />
                 <Button 
                 android:id="@+id/sd_button_scan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/small_button_style"
                 android:text="@string/rescan"
                 android:textColor="#FF000000"
                 android:textSize="14dp"
                 />
             </LinearLayout>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/sd_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="invisible"
            android:layout_marginTop="-10dp"
            >
            <TextView 
                android:id="@+id/sd_progress_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF000000"
                android:text="@string/scanning_sd"
                />
            <ProgressBar 
            	android:id="@+id/sd_progressbar"
            	android:layout_width="200dip"
            	android:layout_height="wrap_content"
            	android:max="100"
            	android:progress="0"
            	style="?android:attr/progressBarStyleHorizontal"
            	android:layout_marginTop="5dp"
            />
            <Button 
                android:id="@+id/sd_start_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rescore_button_style"
                android:textColor="#FF000000"
                android:text="@string/complete"
                android:visibility="invisible"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>

        </FrameLayout>

    </LinearLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_bg_green"
        >
        <TextView 
            android:id="@+id/sd_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFFFF"
            android:layout_gravity="left|center"
       		android:text="@string/classed_stats"
       		android:paddingLeft="10dp"
            />
    </FrameLayout>
	<ListView 
	    android:id="@+id/sd_list"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    ></ListView>
</LinearLayout>