<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/bg"
    >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/head_bg_v2"
        >
        <FrameLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <TextView 
            android:id="@+id/call_msg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/call_title"
            android:textColor="#FFFFFFFF"
            android:textSize="20dp"
            />
        </FrameLayout>
        
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/call_msg_month"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_bg_green"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textColor="#FFFFFFFF"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            />
        <ImageView
            android:id="@+id/call_msg_arrow_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            />
    </LinearLayout>
    
    <ListView 
        android:id="@+id/call_msg_list_month"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:cacheColorHint="#000000"
        ></ListView>
    <LinearLayout 
        android:id="@+id/call_msg_all"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_bg_green"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textColor="#FFFFFFFF"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            />
        <ImageView
            android:id="@+id/call_msg_arrow_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            />
    </LinearLayout>
    <ListView 
        android:id="@+id/call_msg_list_all"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:cacheColorHint="#00000000"
        >
        
    </ListView>
    
</LinearLayout>
<LinearLayout 
        android:id="@+id/call_msg_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bottom_bg"
        android:orientation="horizontal"
        android:gravity="bottom"
        >
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <Button 
            android:id="@+id/call_msg_credit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/credit_button_style"
            />
        </FrameLayout>
        
         <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
             <Button 
            android:id="@+id/call_msg_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/share_button_style"
            />
         </FrameLayout>
        
         <FrameLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
             <Button 
            android:id="@+id/call_msg_diagram_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/diagram_button_style"
            />
         </FrameLayout>
        
         <FrameLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            >
             <Button 
            android:id="@+id/call_msg_exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/exit_button_style"
            />
         </FrameLayout>
        
    </LinearLayout>
</FrameLayout>
